--- a/package.json
+++ b/package.json
@@ -9,15 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.3",
+    "@hookform/resolvers": "^3.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^4.16.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "next": "13.4.8",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
+    "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.3.3",
+    "prisma": "^4.16.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
