--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:aU9XErzOjPww6HhZVPzf@containers-us-west-59.railway.app:7244/railway"
-GITHUB_ID=""
-GITHUB_SECRET=""
+GITHUB_ID="7d75068f31b934bd2ca2"
+GITHUB_SECRET="f2cb54ffaccdf4403aa3f07c1ec804350f0c1d4d"
 GOOGLE_ID=""
 GOOGLE_SECRET=""
 SECRET="AuthenticationByMe1607"
